--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css" integrity="sha512-rd0qOHVMOcez6pLWPVFIv7EfSdGKLt+eafXh4RO/12Fgr41hDQxfGvoi1Vy55QIVcQEujUE1LQrATCLl2Fs+ag==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <main class="main-page">
@@ -255,7 +255,7 @@
 <!--                    </div>-->
 <!--                    <div class="pricing-item swiper-slide">-->
 <!--                        <div class="pricing-item__preview">-->
-<!--                            <div class="pricing-item__bg" style="background-image: url('../img/pricing&#45;&#45;bg.jpg')"></div>-->
+<!--                            <div class="pricing-item__bg" style="background-image: url('img/pricing&#45;&#45;bg.jpg')"></div>-->
 <!--                            <span class="pricing-item__type">-->
 <!--                                Online-->
 <!--                            </span>-->
@@ -299,6 +299,6 @@
     </section>
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js" integrity="sha512-Ysw1DcK1P+uYLqprEAzNQJP+J4hTx4t/3X2nbVwszao8wD+9afLjBQYjz7Uk4ADP+Er++mJoScI42ueGtQOzEA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="/js/index.bundle.js"></script>
+<script src="js/index.bundle.js"></script>
 </body>
 </html>
