--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <main class="main-page">
     <section class="preview">
-        <div class="preview__bg" style="background-image: url('../img/preview--bg.jpg')"></div>
+        <div class="preview__bg" style="background-image: url('img/preview--bg.jpg')"></div>
         <div class="container">
             <div class="preview__box">
                 <div class="preview__info">
@@ -23,7 +23,7 @@
                     </p>
                 </div>
 <!--                <div class="preview__graphic">-->
-<!--                    <img src="../img/preview-img&#45;&#45;1.jpg" alt="" class="preview__img">-->
+<!--                    <img src="img/preview-img&#45;&#45;1.jpg" alt="" class="preview__img">-->
 <!--                </div>-->
             </div>
         </div>
@@ -53,7 +53,7 @@
         </div>
     </section>
     <section class="join-us">
-        <div class="join-us__bg" style="background-image: url('../img/join-us--bg.jpg')"></div>
+        <div class="join-us__bg" style="background-image: url('img/join-us--bg.jpg')"></div>
         <div class="container">
             <div class="join-us__box">
                 <h3 class="join-us__title section-title section-title--size-s section-title--with-border">
@@ -121,7 +121,7 @@
         </div>
     </section>
 <!--    <section class="why-now">-->
-<!--        <div class="why-now__bg" style="background-image: url('../img/why-now&#45;&#45;bg.jpg')"></div>-->
+<!--        <div class="why-now__bg" style="background-image: url('img/why-now&#45;&#45;bg.jpg')"></div>-->
 <!--        <div class="why-now__inner container">-->
 <!--            <div class="why-now__box">-->
 <!--                <h2 class="why-now__title section-title section-title&#45;&#45;centered section-title&#45;&#45;theme-light">-->
@@ -174,7 +174,7 @@
 <!--                <div class="swiper-wrapper">-->
 <!--                    <div class="pricing-item pricing-item&#45;&#45;sold swiper-slide">-->
 <!--                        <div class="pricing-item__preview">-->
-<!--                            <div class="pricing-item__bg" style="background-image: url('../img/pricing&#45;&#45;bg.jpg')"></div>-->
+<!--                            <div class="pricing-item__bg" style="background-image: url('img/pricing&#45;&#45;bg.jpg')"></div>-->
 <!--                            <span class="pricing-item__type">-->
 <!--                                Online-->
 <!--                            </span>-->
@@ -201,7 +201,7 @@
 <!--                    </div>-->
 <!--                    <div class="pricing-item swiper-slide">-->
 <!--                        <div class="pricing-item__preview">-->
-<!--                            <div class="pricing-item__bg" style="background-image: url('../img/pricing&#45;&#45;bg.jpg')"></div>-->
+<!--                            <div class="pricing-item__bg" style="background-image: url('img/pricing&#45;&#45;bg.jpg')"></div>-->
 <!--                            <span class="pricing-item__type">-->
 <!--                                Online-->
 <!--                            </span>-->
@@ -228,7 +228,7 @@
 <!--                    </div>-->
 <!--                    <div class="pricing-item swiper-slide">-->
 <!--                        <div class="pricing-item__preview">-->
-<!--                            <div class="pricing-item__bg" style="background-image: url('../img/pricing&#45;&#45;bg.jpg')"></div>-->
+<!--                            <div class="pricing-item__bg" style="background-image: url('img/pricing&#45;&#45;bg.jpg')"></div>-->
 <!--                            <span class="pricing-item__type">-->
 <!--                                Online-->
 <!--                            </span>-->
